# mac-cleaner-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: README.md
mac_cleaner_cli/: __init__.py  cli.py  config.py
scripts/: mac_sysclean.py
scripts/legacy/: mac_memory.py
src/: __init__.py  cli.py  config.py  maintenance.py  memory.py
src/core/: __init__.py  constants.py  targets.py
src/services/: __init__.py  cleanup_service.py  scanner_service.py
src/utils/: __init__.py  disk.py
tests/: __init__.py  test_config.py  test_memory.py
